Addition to the JVM13 migration